--- a/src/components/ChallengesComponent/ChallengesComponent.module.scss
+++ b/src/components/ChallengesComponent/ChallengesComponent.module.scss
@@ -22,7 +22,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 20px;
+  padding: 0 30px;
 
 }
 
